<resources>
    <string name="app_name">Popular Movies</string>

    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="rating">Rating</string>
    <string name="release_year">Release year</string>
    <string name="error_message">An error has occurred!\nPlease try again or check the internet connection!</string>
    <string name="overview_test_string">Jack Reacher must uncover the truth behind a major government conspiracy in order to clear his name. On the run as a fugitive from the law, Reacher uncovers a potential secret from his past that could change his life forever.</string>
    <string name="release_date_test">2016</string>
    <string name="rating_test">7.9</string>
    <string name="title_test">Fight Club</string>
    <string name="add_to_favorites">Add to\nFavorites</string>
    <string name="reviews_label">Reviews</string>
    <string name="trailers_label">Trailers</string>
    <string name="synopsis">Plot Synopsis</string>
    <string name="share">Share</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="offline_message">Trailers and Reviews are not available offline!</string>
    <string name="menu_favorites">Favorites</string>
</resources>
